test/sema/generic-arg-infer-conflict-range.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(uint a) {
    // CHECK: [[@LINE+1]]:22: error: no matching operator '..' with arguments 'float' and 'uint'
    for (var i in 0.0..a) {}
}
